- Don't remove share/sounds as this port does not own it,   gnomehier does - Trim header
Reported by:	pointyhat


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315555 35697150-7ecd-e111-bb59-0022644237b5

--- a/audio/aubio/Makefile
+++ b/audio/aubio/Makefile
@@ -1,13 +1,9 @@
-# New ports collection makefile for:	aubio
-# Date created:				2008-07-21
-# Whom:				Edward Tomasz Napierala <trasz@FreeBSD.org>
-#
+# Created by: Edward Tomasz Napierala <trasz@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	aubio
 PORTVERSION=	0.3.2
-PORTREVISION=	7
+PORTREVISION=	8
 CATEGORIES=	audio
 MASTER_SITES=	http://aubio.org/pub/
 
