- Update to 0.4004 - Convert to new options framework - Cleanup Makefile
Changes:	http://search.cpan.org/dist/Module-Build/Changes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315562 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/p5-Module-Build/Makefile
+++ b/devel/p5-Module-Build/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	Module::Build
-# Date created:				29 June 2003
-# Whom:                			Dmitry Sivachenko <demon@FreeBSD.org>
-#
+# Created by: Dmitry Sivachenko <demon@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	Module-Build
-PORTVERSION=	0.4003
+PORTVERSION=	0.4004
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -16,6 +12,8 @@ COMMENT=	Build and install Perl modules
 
 TEST_DEPENDS=	p5-Archive-Zip>=0:${PORTSDIR}/archivers/p5-Archive-Zip \
 		p5-PAR-Dist>=0.17:${PORTSDIR}/devel/p5-PAR-Dist
+
+OPTIONS_DEFINE=	DOCS
 
 PORTSCOUT=	skipv:0.31012
 
@@ -53,24 +51,6 @@ PORTDOCS=	Changes INSTALL README
 
 .include <bsd.port.pre.mk>
 
-#.if ${PERL_LEVEL} < 501000
-#RUN_DEPENDS+=	p5-Test-Harness>=3.16:${PORTSDIR}/devel/p5-Test-Harness
-#MAN1=		config_data.1
-#PLIST_FILES=	bin/config_data
-#.endif
-
-#.if ${PERL_LEVEL} < 501001
-#BUILD_DEPENDS+=	p5-ExtUtils-Install>=1.54:${PORTSDIR}/devel/p5-ExtUtils-Install
-#RUN_DEPENDS+=	p5-ExtUtils-Install>=1.54:${PORTSDIR}/devel/p5-ExtUtils-Install
-#.endif
-
-#.if ${PERL_LEVEL} < 501200
-#BUILD_DEPENDS+=	p5-ExtUtils-CBuilder>=0.27:${PORTSDIR}/devel/p5-ExtUtils-CBuilder \
-#		p5-ExtUtils-ParseXS>=2.21:${PORTSDIR}/devel/p5-ExtUtils-ParseXS
-#RUN_DEPENDS+=	p5-ExtUtils-CBuilder>=0.27:${PORTSDIR}/devel/p5-ExtUtils-CBuilder \
-#		p5-ExtUtils-ParseXS>=2.21:${PORTSDIR}/devel/p5-ExtUtils-ParseXS
-#.endif
-
 .if ${PERL_LEVEL} < 501400
 BUILD_DEPENDS+=	p5-CPAN-Meta>=2.110420:${PORTSDIR}/devel/p5-CPAN-Meta \
 		p5-CPAN-Meta-YAML>=0.003:${PORTSDIR}/devel/p5-CPAN-Meta-YAML \
@@ -87,14 +67,12 @@ RUN_DEPENDS+=	p5-CPAN-Meta>=2.110420:${PORTSDIR}/devel/p5-CPAN-Meta \
 .endif
 
 post-patch:
-#.if ${PERL_LEVEL} >= 501000
 	@${RM} -f ${WRKSRC}/bin/config_data
 	@${REINPLACE_CMD} -e '/script_files/d' ${WRKSRC}/Build.PL
 	@${REINPLACE_CMD} -e '/^bin\/config_data/d' ${WRKSRC}/MANIFEST
-#.endif
 
 post-install:
-.if !defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 	${MKDIR} ${DOCSDIR}/
 	${INSTALL_DATA} ${PORTDOCS:S|^|${WRKSRC}/|} ${DOCSDIR}/
 	@${ECHO_MSG} "===> Documentation installed in ${DOCSDIR}."
