- Fix packaging due to bad plist - Trim header
Reported by:	pointyhat


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315563 35697150-7ecd-e111-bb59-0022644237b5

--- a/sysutils/p5-Sys-Gamin/Makefile
+++ b/sysutils/p5-Sys-Gamin/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	p5-Sys-Gamin
-# Date created:		03 May 2007
-# Whom: 	Nick Hibma <n_hibma@FreeBSD.org>
-#
+# Created by: Nick Hibma <n_hibma@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	Sys-Gamin
 PORTVERSION=	0.1
