--- a/devel/p5-Filter/Makefile
+++ b/devel/p5-Filter/Makefile
@@ -2,9 +2,10 @@
 # $FreeBSD$
 
 PORTNAME=	Filter
-PORTVERSION=	1.45
+PORTVERSION=	1.46
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
+MASTER_SITE_SUBDIR=	CPAN:RURBAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	perl@FreeBSD.org
@@ -14,16 +15,15 @@ LICENSE=	ART10 GPLv1
 LICENSE_COMB=	dual
 
 PERL_CONFIGURE=	yes
-
 MAKE_JOBS_UNSAFE=	yes
 
 MAN3=		Filter::Util::Call.3 \
 		Filter::Util::Exec.3 \
+		Filter::Util::perlfilter.3 \
 		Filter::cpp.3 \
 		Filter::decrypt.3 \
 		Filter::exec.3 \
 		Filter::sh.3 \
-		Filter::tee.3 \
-		perlfilter.3
+		Filter::tee.3
 
 .include <bsd.port.mk>
