--- a/security/aide/Makefile
+++ b/security/aide/Makefile
@@ -10,7 +10,7 @@ MASTER_SITES=	SF \
 
 
 MAINTAINER=	cy@FreeBSD.org
-COMMENT=	A replacement and extension for Tripwire
+COMMENT=	Replacement and extension for Tripwire
 
 LIB_DEPENDS=	mhash.2:${PORTSDIR}/security/mhash
 
