--- a/security/bfbtester/Makefile
+++ b/security/bfbtester/Makefile
@@ -1,7 +1,4 @@
-# New ports collection makefile for:	bfbtester
-# Date created:				31 January 2001
-# Whom:					Mike Heffner <mheffner@vt.edu>
-#
+# Created by: Mike Heffner <mheffner@vt.edu>
 # $FreeBSD$
 #
 
@@ -12,7 +9,7 @@ CATEGORIES=	security
 MASTER_SITES=	SF
 
 MAINTAINER=	ports@FreeBSD.org
-COMMENT=	A security tool for testing binaries for overflows
+COMMENT=	Security tool for testing binaries for overflows
 
 GNU_CONFIGURE=	yes
 PLIST_FILES=	bin/bfbtester
