--- a/security/clamassassin/Makefile
+++ b/security/clamassassin/Makefile
@@ -8,7 +8,7 @@ CATEGORIES=	security
 MASTER_SITES=	http://jameslick.com/clamassassin/
 
 MAINTAINER=	chalpin@cs.wisc.edu
-COMMENT=	A simple virus filter wrapper for ClamAV
+COMMENT=	Simple virus filter wrapper for ClamAV
 
 BUILD_DEPENDS=	sigtool:${PORTSDIR}/security/clamav \
 		formail:${PORTSDIR}/mail/procmail
