--- a/security/clamsmtp/Makefile
+++ b/security/clamsmtp/Makefile
@@ -1,7 +1,4 @@
-# New ports collection makefile for:	clamsmtp
-# Date created:		2004-07-29
-# Whom:			Cheng-Lung Sung <clsung@dragon2.net>
-#
+# Created by: Cheng-Lung Sung <clsung@dragon2.net>
 # $FreeBSD$
 #
 
@@ -12,7 +9,7 @@ CATEGORIES=	security
 MASTER_SITES=	http://thewalter.net/stef/software/clamsmtp/
 
 MAINTAINER=	clsung@FreeBSD.org
-COMMENT=	An ClamAV anti-virus SMTP Filter
+COMMENT=	ClamAV anti-virus SMTP Filter
 
 GNU_CONFIGURE=	yes
 USE_GMAKE=	yes
