--- a/security/fwanalog/Makefile
+++ b/security/fwanalog/Makefile
@@ -1,7 +1,4 @@
-# New ports collection makefile for:   fwanalog
-# Date created:                11 March 2002
-# Whom:                        Kimura Fuyuki <fuyuki@mj.0038.net>
-#
+# Created by: Kimura Fuyuki <fuyuki@mj.0038.net>
 # $FreeBSD$
 #
 
@@ -12,7 +9,7 @@ CATEGORIES=	security
 MASTER_SITES=	http://tud.at/programm/fwanalog/
 
 MAINTAINER=	cy@FreeBSD.org
-COMMENT=	A firewall log summarizer that uses Analog
+COMMENT=	Firewall log summarizer that uses Analog
 
 RUN_DEPENDS=	analog:${PORTSDIR}/www/analog
 
