--- a/security/gnome-ssh-askpass/Makefile
+++ b/security/gnome-ssh-askpass/Makefile
@@ -1,7 +1,4 @@
-# New ports collection makefile for: gnome-ssh-askpass
-# Date created:	11 June 2002
-# Whom: Mark Hannon <markhannon@optusnet.com.au>
-#
+# Created by: Mark Hannon <markhannon@optusnet.com.au>
 # $FreeBSD$
 
 PORTNAME=	gnome-ssh-askpass
@@ -12,7 +9,7 @@ MASTER_SITES=	OPENBSD/OpenSSH/portable/
 DISTNAME=	openssh-${PORTVERSION}
 
 MAINTAINER=	5u623l20@gmail.com
-COMMENT=	A graphical ssh askpass utility for Gnome2
+COMMENT=	Graphical SSH askpass utility for Gnome2
 
 PORTSCOUT=	skipv:5.9p1 # Will update when FreeBSD version off SSH goes to 5.9p1
 
