--- a/security/mailzu/Makefile
+++ b/security/mailzu/Makefile
@@ -1,7 +1,4 @@
-# New ports collection makefile for:	mailzu
-# Date created:				20 July 2009
-# Whom:					Sahil Tandon <sahil@tandon.net>
-#
+# Created by: Sahil Tandon <sahil@tandon.net>
 # $FreeBSD$
 #
 
@@ -13,7 +10,7 @@ MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/MailZu%200.8RC3
 DISTNAME=	MailZu_${DISTVERSION:S/rc/RC/}
 
 MAINTAINER=	sahil@FreeBSD.org
-COMMENT=	A simple and intuitive web interface to manage amavisd-new quarantine
+COMMENT=	Simple and intuitive web interface to manage amavisd-new quarantine
 
 RUN_DEPENDS=	${LOCALBASE}/sbin/amavisd:${PORTSDIR}/security/amavisd-new \
 		${PEARDIR}/DB.php:${PORTSDIR}/databases/pear-DB \
