--- a/security/hs-monadcryptorandom/Makefile
+++ b/security/hs-monadcryptorandom/Makefile
@@ -6,7 +6,7 @@ PORTREVISION=	1
 CATEGORIES=	security haskell
 
 MAINTAINER=	haskell@FreeBSD.org
-COMMENT=	A monad for using CryptoRandomGen
+COMMENT=	Monad for using CryptoRandomGen
 
 LICENSE=	BSD
 
