--- a/security/integrit/Makefile
+++ b/security/integrit/Makefile
@@ -1,8 +1,4 @@
-# ex:ts=8
-# New ports collection makefile for:	integrit
-# Date created:			Dec 30, 2000
-# Whom:				Ying-Chieh Liao <ijliao@csie.nctu.edu.tw>
-#
+# Created by: Ying-Chieh Liao <ijliao@csie.nctu.edu.tw>
 # $FreeBSD$
 #
 
@@ -12,7 +8,7 @@ CATEGORIES=	security
 MASTER_SITES=	SF
 
 MAINTAINER=	jos@catnook.com
-COMMENT=	A file integrity verification program
+COMMENT=	File integrity verification program
 
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
 GNU_CONFIGURE=	yes
