--- a/devel/p5-Moose/Makefile
+++ b/devel/p5-Moose/Makefile
@@ -2,10 +2,10 @@
 # $FreeBSD$
 
 PORTNAME=	Moose
-PORTVERSION=	2.0604
+PORTVERSION=	2.0801
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
-MASTER_SITE_SUBDIR=	CPAN:DOY
+MASTER_SITE_SUBDIR=	CPAN:ETHER
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	perl@FreeBSD.org
